# Copyright 2024 Aurora Operations, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@au_pip_deps//:requirements.bzl", "requirement")

load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# This rule adds a convenient way to update the requirements file.
compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

py_binary(
    name = "update_docs",
    srcs = ["update_docs.py"],
    data = [
        "//:mkdocs.yml",
        "//:all_headers",
        "//:all_docs",
    ],
    deps = [
        requirement("mkdocs"),
        requirement("mkdocs-material"),
    ],
)

py_binary(
    name = "mike",
    srcs = ["mike_bin.py"],
    main = "mike_bin.py",
    deps = [
        ":update_docs",
        requirement("mike"),
        requirement("mkdocs"),
        requirement("mkdocs-material"),
    ],
)
